apply plugin: 'java'

sourceCompatibility = '11'

compileJava {
    options.compilerArgs += ['--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
}

jar {
    manifest {
    }
    from {
    }
}

task fatJar(type: Jar) {
    manifest {
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.nativelibs4java:bridj:0.7.0'
}
